--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
     "start": "meteor run"
   },
   "dependencies": {
+    "cheerio": "^0.20.0",
     "meteor-node-stubs": "~0.2.0"
   },
   "devDependencies": {
