--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   },
   "dependencies": {
     "cheerio": "^0.20.0",
-    "meteor-node-stubs": "~0.2.0",
+    "meteor-node-stubs": "~0.2.0"
   },
   "devDependencies": {
     "eslint": "^2.10.2",
